# 2025-11-04-copilot

./: .gitignore  pyproject.toml
.specification/: 04_read_data.md
data/: prosthetics_data_short.csv
src/: main.py
src/config/: system_prompt.md
src/static/: style.css
src/templates/: index.html
tests/: test_dataframe_loading.py
